NetBSD Problem Report #50506

From www@NetBSD.org  Tue Dec  8 13:31:30 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id EE755A6639
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  8 Dec 2015 13:31:30 +0000 (UTC)
Message-Id: <20151208133130.03622A663F@mollari.NetBSD.org>
Date: Tue,  8 Dec 2015 13:31:30 +0000 (UTC)
From: tnn@NetBSD.org
Reply-To: tnn@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: kqueue(2) lacks EV_RECEIPT support
X-Send-Pr-Version: www-1.0

>Number:         50506
>Category:       kern
>Synopsis:       kqueue(2) lacks EV_RECEIPT support
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Dec 08 13:35:00 +0000 2015
>Closed-Date:    Fri Dec 11 12:35:14 +0000 2015
>Last-Modified:  Fri Dec 11 12:35:14 +0000 2015
>Originator:     Tobias Nygren
>Release:        current
>Organization:
>Environment:
n/a
>Description:
This issue was originally raised in an external bug tracker:
https://github.com/facebook/fb-adb/issues/38

DragonflyBSD added EV_RECEIPT support in response:
https://github.com/DragonFlyBSD/DragonFlyBSD/commit/790e2e546ea2fa0a2da2055c14d439ba2cb5edfb

>How-To-Repeat:
Try to build fb-adb.

>Fix:
Implement support for EV_RECEIPT (and EV_DISPATCH?).

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50506 CVS commit: src
Date: Tue, 8 Dec 2015 09:52:06 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Tue Dec  8 14:52:06 UTC 2015

 Modified Files:
 	src/lib/libc/sys: kqueue.2
 	src/sys/kern: kern_event.c
 	src/sys/sys: event.h

 Log Message:
 PR/50506: Tobias Nygren: kqueue(2) lacks EV_DISPATCH/EV_RECEIPT support


 To generate a diff of this commit:
 cvs rdiff -u -r1.34 -r1.35 src/lib/libc/sys/kqueue.2
 cvs rdiff -u -r1.83 -r1.84 src/sys/kern/kern_event.c
 cvs rdiff -u -r1.24 -r1.25 src/sys/sys/event.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: tnn@NetBSD.org
State-Changed-When: Fri, 11 Dec 2015 12:35:14 +0000
State-Changed-Why:
christos fixed it


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.